# codelens

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  buf.gen.yaml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml
.vercel/: project.json
api/: rpc.ts
apps/web/: .cta.json  README.md  components.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: routeTree.gen.ts  styles.css
proto/codelens/v1/: analysis.proto  study.proto
scripts/: doctor.mjs  vercel-build.mjs
serverless/: rpc.ts
services/analyzer/: package.json  pyproject.toml
services/analyzer-ts/: package.json  tsconfig.json
services/analyzer-ts/src/: blob-store.ts  config.ts  git-ops.ts  job-manager.ts  models.ts  repo-snapshot.ts  server.ts  service.ts  store.ts  (+2 more)
services/analyzer/src/analyzer/: config.py  git_ops.py  models.py  server.py  service.py  store.py
services/analyzer/src/analyzer/analysis/: engine.py  heuristic.py  rate_limit_lm.py  repo_snapshot.py  rlm_agents.py  rlm_engine.py  rlm_parse.py  rlm_signatures.py  rlm_streaming.py  rlm_tools.py
services/analyzer/src/analyzer/jobs/: manager.py
services/analyzer/src/codelens/v1/: analysis_connect.py  analysis_pb2.py  analysis_pb2.pyi
services/analyzer/tests/: conftest.py  test_job_manager_progress_metadata.py  test_job_manager_runs_rlm.py  test_repo_snapshot_caps_and_filters.py  test_rlm_output_parsing.py  test_rlm_streaming_retry.py  test_service_analyze_stream_maps_metadata.py  test_store_list_repos.py  test_store_smoke.py
(+24 files in other folders)
